--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zbd-node-example",
-  "version": "0.1.0",
-  "description": "Node.js basic example with ZBD",
+  "version": "0.2.0",
+  "description": "Node.js basic example with ZBD Payments SDK",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -15,6 +15,6 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "@zbd/node": "^0.6.3"
+    "@zbddev/payments-sdk": "^1.5.0"
   }
 }
